--- a/.env
+++ b/.env
@@ -26,7 +26,13 @@ APP_SECRET=aaf9bf38b3b88c5ff8c855c26158092c
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL="postgresql://postgres:pass@database:5432/blog?serverVersion=15&charset=utf8"
+
+POSTGRES_USER="postgres"
+POSTGRES_PASSWORD="pass"
+POSTGRES_DB="blog"
+POSTGRES_VERSION="15"
+
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
