--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,9 @@
     "type": "project",
     "license": "proprietary",
     "minimum-stability": "dev",
-    "prefer-stable": true,
+    "prefer-stable": false,
     "require": {
-        "php": ">=8.1",
+        "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "blackfireio/blackfire-symfony-meta": "^1.0",
@@ -55,12 +55,12 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "Blog\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests/"
+            "Blog\\Tests\\": "tests/"
         }
     },
     "replace": {
