--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -11,11 +11,11 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
         mappings:
-            App:
+            Blog:
                 is_bundle: false
                 dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'App\Entity'
-                alias: App
+                prefix: 'Blog\Entity'
+                alias: Blog
 
 when@test:
     doctrine:
