--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,11 @@
         "doctrine/doctrine-bundle": "^2.9",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.15",
+        "gedmo/doctrine-extensions": "^3.12@dev",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.20",
         "sensio/framework-extra-bundle": "^6.1",
+        "stof/doctrine-extensions-bundle": "*",
         "symfony/asset": "6.3.*",
         "symfony/console": "6.3.*",
         "symfony/doctrine-messenger": "6.3.*",
@@ -38,6 +40,7 @@
         "symfony/string": "6.3.*",
         "symfony/translation": "6.3.*",
         "symfony/twig-bundle": "6.3.*",
+        "symfony/uid": "6.3.*",
         "symfony/validator": "6.3.*",
         "symfony/web-link": "6.3.*",
         "symfony/yaml": "6.3.*",
@@ -55,7 +58,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Blog\\": "src/"
+            "Blog\\": "src/",
+            "Jimmeak\\DoctrineBundle\\": "libs/JimmeakDoctrineBundle/"
         }
     },
     "autoload-dev": {
@@ -89,7 +93,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "6.3.*",
             "docker": true
         }
