build: Makefile for building the project

--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -17,8 +17,8 @@ services:
         depends_on:
             - database
         ports:
-            - "127.0.0.2:80:80"
-            - "127.0.0.2:443:443"
+            - "${WEB_IP_ADDRESS:-127.0.10.1}:80:80"
+            - "${WEB_IP_ADDRESS:-127.0.10.1}:443:443"
         volumes:
             - "./:/var/www/html"
             - ".docker/apache2/000-default.conf:/etc/apache2/sites-enabled/000-default.conf"
@@ -30,7 +30,7 @@ services:
             - youtube-blog
         image: postgres:${POSTGRES_VERSION:-15}-alpine
         ports:
-            - "127.0.0.2:5432:5432"
+            - "${WEB_IP_ADDRESS:-127.0.10.1}:5432:5432"
         environment:
             POSTGRES_DB: ${POSTGRES_DB:-app}
             POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
@@ -46,7 +46,7 @@ services:
         depends_on:
             - database
         ports:
-            - "127.0.0.3:80:8080"
+            - "${DBA_IP_ADDRESS:-127.0.10.2}:80:8080"
     
 volumes:
     database_data:
