--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ docker-compose.yml
 /public/bundles/
 /var/
 /vendor/
+/node_modules
 ###< symfony/framework-bundle ###
 
 ###> phpunit/phpunit ###
@@ -22,3 +23,10 @@ docker-compose.yml
 .phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
